--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -25,6 +25,9 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add sitemap.xml
-          git commit -m "Auto-generate sitemap"
-          git push "https://x-access-token:${{ zelya-pidr.shmoken }}@github.com/latsuha/SwitchPlayer.git" HEAD:main
+          git commit -m "Auto-generate sitemap" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
